Fixed the pencraft alignment issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -770,7 +770,7 @@ li {
 div.pencraft {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   height: 100vh;
   padding-top: 6vh;
   padding-left: 10vw;
@@ -785,18 +785,12 @@ div.pencraft {
 
 .pencraft-content {
   display: flex;
-}
-
-.pen-con-1 {
-  display: flex;
-  position: relative;
-  height: 25vw;
-  width: 100%;
+  flex-direction: column;
 }
 
 .article-image {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 }
 
 .article-image img {
@@ -826,29 +820,129 @@ div.pencraft {
   right: 0;
 }
 
-
-/* .article-content .article-title {
+.pen {
+  display: flex;
   position: relative;
-}  */
+  height: 25vw;
+  width: 100%;
+  margin: 10px;
+}
 
-/* .article-content {
+.article-content {
   position: relative;
-  display: block;
+  float: right;
+  z-index: 3;
+  margin-left: 25vw;
   width: 70%;
-  height: 50%;
+  height: 75%;
   z-index: 2;
-  left: 30%;
-  top: 25%;
-  background-color: #433951;
+  top: 12.5%;
+  background-color: #544866;
+}
+
+.article-content .article-title {
+  padding-bottom: 1vw;
+  padding-left: 0.5vw;
+  padding-top: 0.5vw;
+  font-weight: bolder;
+  color: #e5e5e5;
 }
 
 .article-content .article-description {
   padding-left: 1vw;
+  padding-right: 1vw;
   padding-bottom: 1vw;
 }
 
 .article-content p {
   text-align: justify;
-  font-size: 1vw;
+  font-size: 1.3vw;
   color: #e5e5e5;
+}
+
+/* .pen-con-1 {
+  display: flex;
+  position: relative;
+  height: 25vw;
+  width: 100%;
+}
+.pen-con-2 {
+  display: flex;
+  position: relative;
+  height: 25vw;
+  width: 100%;
 } */
+
+/*
+.article-image {
+  position: absolute;
+  z-index: 2;
+}
+
+.article-image img {
+  width: 43.5%;
+  height: 100%;
+}
+ 
+.article-image::before {
+  content: "";
+  background-color: rgba(255, 178, 10, 0.6);
+  position: absolute;
+  width: 43.5%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.article-image:hover::before {
+  content: "";
+  background: rgba(255, 178, 10, 0);
+  width: 43.5%;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.article-content {
+  position: relative;
+  float: right;
+  z-index: 3;
+  margin-left: 25vw;
+}
+
+.article-content .article-title {
+  position: relative;
+}
+
+.article-content {
+  position: relative;
+  display: block;
+  width: 70%;
+  height: 75%;
+  z-index: 2;
+  top: 12.5%;
+  background-color: #544866;
+}
+
+.article-content .article-title {
+  padding-bottom: 1vw;
+  padding-left: 0.5vw;
+  padding-top: 0.5vw;
+  font-weight: bolder;
+  color: #e5e5e5;
+}
+
+.article-content .article-description {
+  padding-left: 1vw;
+  padding-right: 1vw;
+  padding-bottom: 1vw;
+}
+
+.article-content p {
+  text-align: justify;
+  font-size: 1.3vw;
+  color: #e5e5e5;
+}  */
